sgd/reproduction/playground/objects/SVMXC__Service_Pricebook_Entry__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Represent price entry for service</description>
    <fields>
        <fullName>SMAX_PS_Product_Classification__c</fullName>
        <formula>SVMXC__Activity_Product__r.SMAX_PS_Product_Classification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>製品区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Name__c</fullName>
        <formula>SVMXC__Activity_Product__r.SVMXC__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>品目名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Target__c</fullName>
        <formula>SVMXC__Activity_Product__r.SMAX_PS_Service_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>対象区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Unit_Of_Measure__c</fullName>
        <formula>SVMXC__Activity_Product__r.SMAX_PS_Unit_Of_Measure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>単位（サービス品目）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activity_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Product</label>
        <referenceTo>SVMXC__Activity_Product__c</referenceTo>
        <relationshipLabel>Service Pricebook Entry</relationshipLabel>
        <relationshipName>Service_Pricebook_Entry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activity_Type__c</fullName>
        <formula>IF( NOT(ISBLANK(SVMXC__Activity_Product__c)) , TEXT( SVMXC__Activity_Product__r.SVMXC__Activity__r.SVMXC__Activity_Type__c ),  IF( NOT(ISBLANK(SVMXC__Activity__c)) , TEXT(SVMXC__Activity__r.SVMXC__Activity_Type__c), &apos;&apos; )  )</formula>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Id</label>
        <referenceTo>SVMXC__Activity_Master__c</referenceTo>
        <relationshipLabel>Service Pricebook Entry (Activity)</relationshipLabel>
        <relationshipName>Service_Pricebook_Entry1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entry_Type__c</fullName>
        <description>Pricebook Entry Type</description>
        <inlineHelpText>Pricebook Entry Type</inlineHelpText>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Labor</fullName>
                    <default>true</default>
                    <label>Labor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Price_Book__c</fullName>
        <label>Price Book</label>
        <referenceTo>SVMXC__Service_Pricebook__c</referenceTo>
        <relationshipLabel>Service Pricebook Entry</relationshipLabel>
        <relationshipName>PriceBook</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Family__c</fullName>
        <formula>TEXT( SVMXC__Activity_Product__r.SVMXC__Product_Family__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Line__c</fullName>
        <formula>TEXT( SVMXC__Activity_Product__r.SVMXC__Product_Line__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <formula>SVMXC__Activity_Product__r.SVMXC__Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Regular_Rate__c</fullName>
        <description>Regular Rate</description>
        <label>Regular Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Pricebook Entry</label>
    <listViews>
        <fullName>SVMXC__All_Service_Pricebook_Entry</fullName>
        <filterScope>Everything</filterScope>
        <label>All Service Pricebook Entry</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Pricebook Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SVMXC__SVMX_Activity_Or_ActivityProduct</fullName>
        <active>false</active>
        <errorConditionFormula>IF(LEN(SVMXC__Activity__r.Id) &gt; 0, IF(LEN(SVMXC__Activity_Product__r.Id) &gt; 0, TRUE, FALSE), IF(LEN(SVMXC__Activity_Product__r.Id) &gt; 0, FALSE, TRUE))</errorConditionFormula>
        <errorMessage>Price must be set for either Activity or Activity Product, but not both.</errorMessage>
    </validationRules>
</CustomObject>